# advent_of_code

./: .gitignore  pyproject.toml
advent_of_code/: _2022.py  __init__.py  __main__.py  y2022.py
test/: test_2022.py
