[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Oliver Catling <oliver.catling@elemica.com>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
